--- a/404.html
+++ b/404.html
@@ -1,16 +1,13 @@
 ---
+layout: page
+title: Page not found
+image:
 permalink: /404.html
-layout: default
 ---
-
-<article class="container mx-auto px-2 mt2 mb4">
-  <header>
-    <h1 class="h0 py-3 mt-3">404</h1>
-  </header>
-  <div class="col-4 sm-width-full border-top-thin">
+<div class="container">
+  <div style="text-align: center">
+    <h2>404</h2>
+    <p>The page you are looking for doesn't exist or has been moved.</p>
+    <p><a href="{{site.baseurl}}/">Back to the bLog</a></p>
   </div>
-  <div class="prose mb-4 py-4">
-    <p>The requested page could not be found :(</p>
-  </div>
-
-</article>
+</div>
